fix overflow

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     align-items: center;
-    width: auto;
+    width: 100%;
     height: 45px;
     box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.25);
 }
@@ -190,11 +190,14 @@ h3 {
 .streaming_op-section{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    height: 224px;
+    justify-items: center;
+    align-items: center;
+    height: 180px;
     width: 80%;
     margin: auto;
-    margin-top: 5rem;
-    column-gap: 10px;
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+    /*column-gap: 10px;*/
 }
 
 .cards {
